# NES-emulator

./: .gitignore  Cargo.toml  README.md  out.txt
src/: bus.rs  cartridge.rs  cpu.rs  main.rs  opcodes.rs  trace.rs
src/ppu/: mod.rs
src/ppu/registers/: addr.rs  control.rs  mask.rs  mod.rs  scroll.rs  status.rs
src/render/: frame.rs  mod.rs
