[package]
name = "nes_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bitflags = "1.2.1"

# sdl2 = "0.34.0"
rand = "=0.7.3"

[target.'cfg(target_os="macos")'.dependencies.sdl2]
features=["bundled"]
version="0.36.0"
# version="0.34.0"
